--- a/package.json
+++ b/package.json
@@ -32,5 +32,11 @@
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-vue": "^4.5.0",
     "prettier": "^1.12.1"
+  },
+    "scripts": {
+    "dev": "node server.js",
+    "build": "next build",
+    "start": "NODE_ENV=production node server.js",
+    "export": "npm run build && next export"
   }
 }
