--- a/package.json
+++ b/package.json
@@ -37,6 +37,6 @@
     "dev": "node server.js",
     "build": "next build",
     "start": "NODE_ENV=production node server.js",
-    "export": "npm run build && next export"
+    "export": "npm run generate && next export"
   }
 }
